--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,36 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+alice:
+  id: 1
+  email: alice@clio.com
+  encrypted_password: "$2a$10$xeQU8HTydJQ7fjtbnzT.OuwZGdUZncMv4nQ/ACb.UGfu1hRGVe1L2"
+  reset_password_token: 
+  reset_password_sent_at: 
+  remember_created_at: 
+  sign_in_count: 2
+  current_sign_in_at: 2016-08-30 19:56:42.068015000 Z
+  last_sign_in_at: 2016-08-30 19:56:15.211493000 Z
+  current_sign_in_ip: "::1"
+  last_sign_in_ip: "::1"
+  created_at: 2016-08-30 19:56:15.187911000 Z
+  updated_at: 2016-08-30 19:56:42.069264000 Z
+  first_name: Alice
+  last_name: Gooduser
+
+mallory:
+  id: 2
+  email: mallory@clio.com
+  encrypted_password: "$2a$10$6O4y56PSdeSu84mjA9d6i.T7EziGJZwcOcU0/IjOfcpNwPOZeFUvO"
+  reset_password_token: 
+  reset_password_sent_at: 
+  remember_created_at: 
+  sign_in_count: 1
+  current_sign_in_at: 2016-08-30 19:56:28.757098000 Z
+  last_sign_in_at: 2016-08-30 19:56:28.757098000 Z
+  current_sign_in_ip: "::1"
+  last_sign_in_ip: "::1"
+  created_at: 2016-08-30 19:56:28.752873000 Z
+  updated_at: 2016-08-30 19:56:28.757642000 Z
+  first_name: Mallory
+  last_name: Baduser
